2008-09-27 [colin]	2.0.0cvs14

	* src/Makefile.am
	* src/claws.def
	* src/icaltime_as_local.c
	* src/plugin.def
	* src/vcal_folder.c
	* src/vcal_manager.c
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
	* src/version.rc
		Windows port (ical feeds are crashy)

2008-09-18 [colin]	2.0.0cvs13

	* src/vcalendar.c
		Decode ISO-8859-1 as Windows-1252

2008-09-09 [colin]	2.0.0cvs12

	* src/day-view.c
	* src/month-view.c
		Undeprecate for GTK+ 2.14

2008-08-21 [colin]	2.0.0cvs11

	* src/day-view.c
	* src/month-view.c
		Make the calendar nicer on dark themes

2008-08-19 [colin]	2.0.0cvs10

	* src/vcalendar.c
		Fix crash on missing answer in a reply

2008-08-17 [colin]	2.0.0cvs9

	* src/vcalendar.c
	* libical/libical/icalerror.c
		Warning fix

2008-08-07 [colin]	2.0.0cvs8

	* src/day-view.c
	* src/month-view.c
	* src/vcal_meeting_gtk.c
	* src/vcalendar.c
		Undeprecate

2008-08-05 [colin]	2.0.0cvs7

	* src/day-view.c
	* src/month-view.c
	* src/plugin.c
	* src/vcal_folder.c
	* src/vcalendar.c
		Undeprecate GtkCTree

2008-07-31 [colin]	2.0.0cvs6

	* src/common-views.c
	* src/common-views.h
	* src/day-view.c
	* src/month-view.c
		Get rid of the GtkItemFactory

2008-07-30 [colin]	2.0.0cvs5

	* src/plugin.c
	* src/vcal_folder.c
		Move the folderview popup menu to GtkUIManager

2008-07-29 [colin]	2.0.0cvs4

	* src/vcalendar.c
		Switch the main menu to GtkUIManager

2008-07-25 [colin]	2.0.0cvs3

	* src/vcalendar.c
		Switch the context menu in the summaryview to
		GtkUIManager

2008-07-20 [colin]	2.0.0cvs2

	* src/day-view.c
	* src/month-view.c
	* src/vcal_meeting_gtk.c
	* src/vcal_prefs.c
		Undeprecate tooltips

2008-07-08 [colin]	2.0.0cvs1

	* libical/libical/icalparser.c
		Lines can be folded with tabs in addition
		to spaces (RFC 2445, 4.1 Content Lines)

2008-06-27 [paul]	2.0.0

	version 2.0.0 released

2008-06-27 [paul]	1.102.0cvs8

	* po/es.po
	* po/fi.po
		updated by Ricardo Mones and Flammie Pirinen

2008-05-16 [paul]	1.102.0cvs7

	* src/vcal_folder.c
		fix a compiler warning
