@@ -193,3 +193,4 @@
 ( cvs diff -u -r 1.1.2.17 -r 1.1.2.18 src/day-view.c;  cvs diff -u -r 1.1.2.17 -r 1.1.2.18 src/month-view.c;  ) > 2.0.0cvs12.patchset
 ( cvs diff -u -r 1.2.2.79 -r 1.2.2.80 src/vcalendar.c;  ) > 2.0.0cvs13.patchset
 ( cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/Makefile.am;  diff -u /dev/null src/claws.def;  cvs diff -u -r 1.1.2.1 -r 1.1.2.2 src/icaltime_as_local.c;  diff -u /dev/null src/plugin.def;  cvs diff -u -r 1.2.2.100 -r 1.2.2.101 src/vcal_folder.c;  cvs diff -u -r 1.1.2.73 -r 1.1.2.74 src/vcal_manager.c;  cvs diff -u -r 1.1.2.79 -r 1.1.2.80 src/vcal_meeting_gtk.c;  cvs diff -u -r 1.2.2.80 -r 1.2.2.81 src/vcalendar.c;  diff -u /dev/null src/version.rc;  ) > 2.0.0cvs14.patchset
+( cvs diff -u -r 1.1.2.5 -r 1.1.2.6 libical/libical/icaltime.c;  ) > 2.0.0cvs15.patchset
