@@ -10,7 +10,7 @@ dnl plugin version
 MAJOR_VERSION=2
 MINOR_VERSION=0
 MICRO_VERSION=0
-EXTRA_VERSION=14
+EXTRA_VERSION=15
 
 CFLAGS="$CFLAGS -Wall"
 
