@@ -1,3 +1,8 @@
+2008-09-27 [colin]	2.0.0cvs15
+
+	* libical/libical/icaltime.c
+		Windows port too
+
 2008-09-27 [colin]	2.0.0cvs14
 
 	* src/Makefile.am
